# workstree

./: .goreleaser.yaml  AGENTS.md  DESIGN.md  LICENSE  README.md  bootstrap.go  bootstrap_test.go  config.go  config_test.go  git.go  go.mod  go.sum  install.sh  main.go  suggest.go  suggest_test.go
.github/workflows/: ci.yml  release.yml
packaging/npm/: README.md  index.js  package.json
packaging/pypi/: README.md  pyproject.toml
packaging/pypi/src/workstree/: __init__.py
skills/workstree/: SKILL.md
