[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workstree"
version = "0.0.1"
description = "Worktrees that work on the first try — reserves the name; the tool is a Go binary distributed via GitHub releases."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Mihailo Bubnjevic" }]
requires-python = ">=3.8"
keywords = ["git", "worktree", "agents", "bootstrap", "cli"]

[project.urls]
Homepage = "https://github.com/whoislikemiha/workstree"
Repository = "https://github.com/whoislikemiha/workstree"

[project.scripts]
workstree = "workstree:main"

[tool.hatch.build.targets.wheel]
packages = ["src/workstree"]
